package service

import (
	"context"
	"encoding/json"
	"fmt"
	"github.com/UnicomAI/wanwu/internal/assistant-service/service/conversation"
	"net/http"
	"sort"
	"time"

	assistant_service "github.com/UnicomAI/wanwu/api/proto/assistant-service"
	"github.com/UnicomAI/wanwu/internal/assistant-service/client/model"
	"github.com/UnicomAI/wanwu/pkg/es"
	"github.com/UnicomAI/wanwu/pkg/log"
	sse_util "github.com/UnicomAI/wanwu/pkg/sse-util"
	"github.com/google/uuid"
)

const (
	esTimeout = 1 * time.Minute
)

type ConversationParams struct {
	AssistantId    string           `json:"assistantId"`
	ConversationId string           `json:"conversationId"`
	UserId         string           `json:"userId"`
	OrgId          string           `json:"orgId"`
	Query          string           `json:"query"`
	FileInfo       []model.FileInfo `json:"fileInfo"`
}

type AgentChatResp struct {
	Code       int           `json:"code"`
	Message    string        `json:"message"`
	Response   string        `json:"response"`
	SearchList []interface{} `json:"search_list"`
	Finish     int           `json:"finish"`
	EventType  int           `json:"eventType"`
	EventData  interface{}   `json:"eventData"`
}

type ConversationProcessor struct {
	SSEWriter *sse_util.SSEWriter[assistant_service.AssistantConversionStreamResp]
}

func (cp *ConversationProcessor) Process(ctx context.Context, req *ConversationParams, sendRequest func(ctx context.Context) (string, *http.Response, context.CancelFunc, error)) (err error) {
	var conversationResp = conversation.CreateConversationResp()
	defer func() {
		if err != nil {
			log.Errorf("[Conversation] err: %v", err)
			//错误信息通知
			_ = cp.SSEWriter.WriteLine(assistant_service.AssistantConversionStreamResp{
				Content: buildErrMsg(err),
			}, false, nil, nil)
		}
		if ctx.Err() != nil {
			err = ctx.Err()
			log.Errorf("[Conversation] context err: %v", err)
		}
		//todo delete
		log.Infof("[Conversation] fullResponse: %s", conversationResp.Response())
		//保存会话
		saveConversation(ctx, req, conversationResp)
	}()
	//1.执行请求
	businessKey, sseResp, cancel, err := sendRequest(ctx)
	if err != nil {
		return err
	}
	defer cancel()
	//2.读取结果
	SSEReader := &sse_util.SSEReader[string]{
		BusinessKey:    businessKey,
		StreamReceiver: sse_util.NewHttpStreamReceiver(sseResp),
	}
	stream, err := SSEReader.ReadStream(ctx)
	if err != nil {
		return err
	}
	//3.回写结果
	err = cp.SSEWriter.WriteStream(stream, nil, conversationLineBuilder(conversationResp), nil)
	return err
}

func conversationLineBuilder(conversationResp *conversation.ConversationResp) func(s sse_util.SSEWriterClient[assistant_service.AssistantConversionStreamResp], strLine string, streamContextParams interface{}) (assistant_service.AssistantConversionStreamResp, bool, error) {
	return func(s sse_util.SSEWriterClient[assistant_service.AssistantConversionStreamResp], strLine string, streamContextParams interface{}) (assistant_service.AssistantConversionStreamResp, bool, error) {
		err := conversation.BuildConversationResp(conversationResp, strLine)
		if err != nil {
			log.Errorf("BuildConversationResp error %s", err)
		}
		return assistant_service.AssistantConversionStreamResp{
			Content: strLine,
		}, false, nil
	}
}

// 构建错误信息,todo 后续考虑创建枚举明细错误信息
func buildErrMsg(err error) string {
	var agentChatResp = &AgentChatResp{
		Code:     1,
		Message:  "智能体处理异常，请稍后重试",
		Response: "智能体处理异常，请稍后重试",
		Finish:   1,
	}
	respString, errR := json.Marshal(agentChatResp)
	if errR != nil {
		log.Errorf("buildErrMsg error: %v", errR)
		return ""
	}
	return string(respString)
}

// 使用独立上下文保存对话的辅助函数
func saveConversation(originalCtx context.Context, req *ConversationParams, conversationResp *conversation.ConversationResp) {
	if len(req.ConversationId) == 0 {
		return
	}
	// 如果原始上下文已取消，创建一个新的独立上下文
	if originalCtx.Err() != nil {
		ctx, cancel := context.WithTimeout(context.Background(), esTimeout)
		defer cancel()

		if err := saveConversationDetailToES(ctx, req, conversationResp); err != nil {
			log.Errorf("保存聊天记录到ES失败，assistantId: %s, conversationId: %s, error: %v",
				req.AssistantId, req.ConversationId, err)
		}
		return
	}

	// 原始上下文未取消时，继续使用它
	if err := saveConversationDetailToES(originalCtx, req, conversationResp); err != nil {
		log.Errorf("保存聊天记录到ES失败，assistantId: %s, conversationId: %s, error: %v",
			req.AssistantId, req.ConversationId, err)
	}
}

// saveConversationDetailToES 保存聊天记录到ES
func saveConversationDetailToES(ctx context.Context, req *ConversationParams, conversationResp *conversation.ConversationResp) error {
	// 根据当前时间生成索引名称，格式为conversation_detail_infos_YYYYMM
	now := time.Now()
	indexName := fmt.Sprintf("conversation_detail_infos_%d%02d", now.Year(), now.Month())

	// 组装ConversationDetails数据
	conversationDetail := buildConversationDetail(req, conversationResp, now.UnixMilli())
	// 写入ES
	if err := es.Assistant().IndexDocument(ctx, indexName, conversationDetail); err != nil {
		return fmt.Errorf("写入ES失败: %v", err)
	}

	log.Infof("成功保存聊天记录到ES，索引: %s, assistantId: %s, conversationId: %s",
		indexName, req.AssistantId, req.ConversationId)
	return nil
}

func buildConversationDetail(req *ConversationParams, conversationResp *conversation.ConversationResp, nowMilli int64) *model.ConversationDetails {
	return &model.ConversationDetails{
		Id:                        uuid.New().String(),
		AssistantId:               req.AssistantId,
		ConversationId:            req.ConversationId,
		Prompt:                    req.Query,
		FileInfo:                  req.FileInfo,
		Response:                  conversationResp.Response(),
		SearchList:                conversationResp.References(),
		UserId:                    req.UserId,
		OrgId:                     req.OrgId,
		CreatedAt:                 nowMilli,
		UpdatedAt:                 nowMilli,
		SubConversationDetailList: buildSubConversationDetailList(conversationResp),
	}
}

func buildSubConversationDetailList(conversationResp *conversation.ConversationResp) []*model.SubConversationDetail {
	if len(conversationResp.ConversationEventMap) == 0 {
		return make([]*model.SubConversationDetail, 0)
	}
	var dataList []*conversation.ConversationResp
	for _, subConversationResp := range conversationResp.ConversationEventMap {
		dataList = append(dataList, subConversationResp)
	}
	// 对切片进行排序
	sort.Slice(dataList, func(i, j int) bool {
		// Order值小的时间更早，排在前面
		return dataList[i].Order < dataList[j].Order
	})
	var retList []*model.SubConversationDetail
	for _, subConversationResp := range dataList {
		retList = append(retList, &model.SubConversationDetail{
			BusinessId:       subConversationResp.EventData.Id,
			ConversationType: buildConversationType(subConversationResp.EventType),
			Content:          subConversationResp.Response(),
			SearchList:       subConversationResp.References(),
			EventData:        subConversationResp.EventData,
		})
	}
	return retList
}

func buildConversationType(eventType int) model.ConversationType {
	if eventType == 1 {
		return model.SubAgent
	}
	//目前只有subAgent 支持后续扩展
	return model.SubAgent
}
